Fix timetable dimension on small screen

--- a/pyconbalkan/core/static/css/components/timetable.css
+++ b/pyconbalkan/core/static/css/components/timetable.css
@@ -24,7 +24,16 @@
     padding: 15px 20px;
     border-radius: 20px;
     background-color: #ffd64f;
-    color: #000;
+    color: #fff;
+    word-wrap: break-word;
+    overflow: hidden;
+}
+
+@media (max-width: 1280px){
+    .presentation-card {
+	width: 100%;
+	flex-shrink: 0;
+    }
 }
 
 .presentation-card div {
@@ -50,7 +59,7 @@
 }
 
 .presentation-card .description {
-    margin-top: 20px;
+    margin: 10px 0;
     font-size: 1.8em;
     font-weight: bold;
 }
